adding carousel functionality

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,16 +98,19 @@ p {
 /* Testimonial Section  */
 
 #testimonials {
-    padding: 7% 15%;
     text-align: center;
     background-color: #EF8172;
     color: #fff;
 }
 
 .testimonial-image {
-    width: 10%;
+    width: 11%;
     border-radius: 100%;
     padding: 20px;
+}
+
+.carousel-item {
+    padding: 7% 15%;
 }
 
 #press {
