--- a/css/styles.css
+++ b/css/styles.css
@@ -123,3 +123,12 @@ p {
     width: 15%;
     margin: 20px 20px 50px;
 }
+
+#pricing {
+    padding: 100px;
+}
+
+.pricing-column {
+    text-align: center;
+    padding: 3% 2%;
+}
