--- a/css/styles.css
+++ b/css/styles.css
@@ -151,3 +151,27 @@ p {
         transform: rotate(0);
     }
 }
+
+#cta {
+    font-family: "Montserrat";
+    font-weight: bold;
+    font-size: 3rem;
+    line-height: 1.5;
+    color: #fff;
+    text-align: center;
+    background-color: #ff4c68;
+    padding: 7% 15% 3%;
+}
+
+#cta > h3 {
+    font-size: 2.2rem;
+}
+
+.footer-icon {
+    padding: 1%;
+    font-size: 1.1rem;
+}
+footer {
+    text-align: center;
+    padding: 7% 15%;
+}
