--- a/css/styles.css
+++ b/css/styles.css
@@ -1,177 +1,180 @@
+
 body {
     font-family: "Montserrat";
-}
-
-#title {
-    background-color: #ff4c68;
-    color: white;
-}
-
-h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
+    text-align: center;
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+    font-family: "Montserrat-Bold";
+  }
+  
+  p {
+    color: #8f8f8f;
+  }
+  
+  /* Headings */
+  
+  .big-heading {
+    font-family: "Montserrat-Black";
     font-size: 3.5rem;
     line-height: 1.5;
-}
-
-h2 {
-    font-family: "Montserrat";
-    font-weight: bold;
+  }
+  
+  .section-heading {
     font-size: 3rem;
     line-height: 1.5;
-}
-
-h3 {
-    font-family: "Montserrat";
-    font-weight: bold;
-    font-size: 1.5rem;
-}
-
-p {
-    color: #999999;
-}
-
-.container-fluid {
-    padding: 3% 15% 7%;
-}
-
-/* Navigation Bar */
-.navbar {
-    padding-bottom: 4.5rem;
-}
-
-.navbar-brand {
+  }
+  
+  /* Containers */
+  
+  .container-fluid{
+    padding: 7% 15%;
+  }
+  
+  /* Sections */
+  
+  .colored-section {
+    background-color: #ff4c68;
+    color: #fff;
+  }
+  
+  .white-section {
+    background-color: #fff;
+  }
+  
+  /* Navigation Bar */
+  
+  .navbar {
+    padding: 0 0 4.5rem;
+  }
+  
+  .navbar-brand {
     font-family: "Ubuntu";
     font-size: 2.5rem;
     font-weight: bold;
-}
-
-.nav-item {
-    padding: 18px;
-}
-
-.nav-link {
+  }
+  
+  .nav-item {
+    padding: 0 18px;
+  }
+  
+  .nav-link {
     font-size: 1.2rem;
-    font-family: "Monserrat";
-    font-weight: 300;
-}
-
-/* download-button */
-
-.download-button {
+    font-family: "Montserrat-Light";
+  }
+  
+  /* Buttons */
+  
+  .download-button {
     margin: 5% 3% 5% 0;
-}
-
-/* Title-Image */
-
-.img-container {
-    position: relative;
-}
-
-.Title-Image {
+  }
+  
+  /* Title Section */
+  
+  #title {
+    background-color: #ff4c68;
+    color: #fff;
+    text-align: left;
+  }
+  
+  #title .container-fluid {
+    padding: 3% 15% 7%;
+  }
+  
+  /* Title Image */
+  
+  .title-image {
     width: 60%;
-    right: 25%;
     transform: rotate(25deg);
     position: absolute;
-}
-
-#features {
-    padding: 7% 15%;
-    background-color: #fff;
+    right: 30%;
+  }
+  
+  /* Features Section */
+  
+  #features {
     position: relative;
-    z-index: 1;
-}
-
-.features-box {
-    text-align: center;
-    padding: 5%;
-}
-
-.features-icon {
-    color: #EF8172;
-    font-size: 4rem;
-    padding: 5%;
-
-}
-
-.features-icon:hover {
+  }
+  
+  .feature-title {
+    font-size: 1.5rem;
+  }
+  
+  .feature-box {
+    padding: 4.5%;
+  }
+  
+  .icon {
+    color: #ef8172;
+    margin-bottom: 1rem;
+  }
+  
+  .icon:hover {
     color: #ff4c68;
-}
-
-.grid {
-    display: grid;
-    place-items: center;
-}
-
-/* Testimonial Section  */
-
-#testimonials {
-    text-align: center;
-    background-color: #EF8172;
-    color: #fff;
-}
-
-.testimonial-image {
-    width: 11%;
-    border-radius: 100%;
-    padding: 20px;
-}
-
-.carousel-item {
-    padding: 7% 15%;
-}
-
-#press {
-    background-color: #EF8172;
-    text-align: center;
-    padding-bottom: 3%;
-}
-
-.press-logo {
-    width: 15%;
-    margin: 20px 20px 50px;
-}
-
-#pricing {
-    padding: 100px;
-}
-
-.pricing-column {
-    text-align: center;
-    padding: 3% 2%;
-}
-
-@media (max-width: 1028px) {
-
-    #title {
-        text-align: center;
-    }
-    .Title-Image {
-        position: static;
-        transform: rotate(0);
-    }
-}
-
-#cta {
-    font-family: "Montserrat";
-    font-weight: bold;
+  }
+  
+  /* Testimonial Section */
+  
+  #testimonials {
+    background-color: #ef8172;
+  }
+  
+  .testimonial-text {
     font-size: 3rem;
     line-height: 1.5;
-    color: #fff;
-    text-align: center;
-    background-color: #ff4c68;
-    padding: 7% 15% 3%;
-}
-
-#cta > h3 {
-    font-size: 2.2rem;
-}
-
-.footer-icon {
-    padding: 1%;
-    font-size: 1.1rem;
-}
-footer {
-    text-align: center;
-    padding: 7% 15%;
-}
+  }
+  
+  .testimonial-image {
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+  }
+  
+  
+  #press {
+    background-color: #ef8172;
+    padding-bottom: 3%;
+  }
+  
+  .press-logo {
+    width: 15%;
+    margin: 20px 20px 50px;
+  }
+  
+  /* Pricing Section */
+  
+  #pricing {
+    padding: 100px;
+  }
+  
+  .price-text {
+    font-size: 3rem;
+    line-height: 1.5;
+  }
+  
+  .pricing-column {
+    padding: 3% 2%;
+  }
+  
+  /* CTA Section */
+  
+  
+  /* Footer Section */
+  
+  
+  .social-icon {
+    margin: 20px 10px;
+  }
+  
+  @media (max-width: 1028px) {
+  
+    #title {
+      text-align: center;
+    }
+  
+    .title-image {
+      position: static;
+      transform: rotate(0);
+    }
+  }
+  
