--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {
   }
   
   h1, h2, h3, h4, h5, h6 {
-    font-family: "Montserrat-Bold";
+    font-family: "Montserrat";
   }
   
   p {
@@ -15,7 +15,7 @@ body {
   /* Headings */
   
   .big-heading {
-    font-family: "Montserrat-Black";
+    font-family: "Montserrat";
     font-size: 3.5rem;
     line-height: 1.5;
   }
